QtWidgets/gen_qgraphicsscene.h

typedef struct QBrush QBrush;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsLineItem QGraphicsLineItem;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneHelpEvent QGraphicsSceneHelpEvent;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsSceneWheelEvent QGraphicsSceneWheelEvent;
typedef struct QGraphicsSimpleTextItem QGraphicsSimpleTextItem;
typedef struct QGraphicsTextItem QGraphicsTextItem;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLineF QLineF;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPen QPen;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
void QGraphicsScene_render4(QGraphicsScene* self, QPainter* painter, QRectF* target, QRectF* source, int aspectRatioMode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items1(const QGraphicsScene* self, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items22(const QGraphicsScene* self, QPointF* pos, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items3(const QGraphicsScene* self, QPointF* pos, int mode, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items4(const QGraphicsScene* self, QPointF* pos, int mode, int order, QTransform* deviceTransform);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items23(const QGraphicsScene* self, QRectF* rect, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items32(const QGraphicsScene* self, QRectF* rect, int mode, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items42(const QGraphicsScene* self, QRectF* rect, int mode, int order, QTransform* deviceTransform);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items25(const QGraphicsScene* self, QPainterPath* path, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items34(const QGraphicsScene* self, QPainterPath* path, int mode, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items44(const QGraphicsScene* self, QPainterPath* path, int mode, int order, QTransform* deviceTransform);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_collidingItems2(const QGraphicsScene* self, QGraphicsItem* item, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items7(const QGraphicsScene* self, double x, double y, double w, double h, int mode, int order, QTransform* deviceTransform);
void QGraphicsScene_setSelectionArea22(QGraphicsScene* self, QPainterPath* path, int mode);
void QGraphicsScene_setSelectionArea3(QGraphicsScene* self, QPainterPath* path, int mode, QTransform* deviceTransform);
void QGraphicsScene_setSelectionArea32(QGraphicsScene* self, QPainterPath* path, int selectionOperation, int mode);
void QGraphicsScene_setSelectionArea4(QGraphicsScene* self, QPainterPath* path, int selectionOperation, int mode, QTransform* deviceTransform);
QGraphicsEllipseItem* QGraphicsScene_addEllipse22(QGraphicsScene* self, QRectF* rect, QPen* pen);
QGraphicsEllipseItem* QGraphicsScene_addEllipse3(QGraphicsScene* self, QRectF* rect, QPen* pen, QBrush* brush);
QGraphicsLineItem* QGraphicsScene_addLine22(QGraphicsScene* self, QLineF* line, QPen* pen);
QGraphicsPathItem* QGraphicsScene_addPath2(QGraphicsScene* self, QPainterPath* path, QPen* pen);
QGraphicsPathItem* QGraphicsScene_addPath3(QGraphicsScene* self, QPainterPath* path, QPen* pen, QBrush* brush);
QGraphicsRectItem* QGraphicsScene_addRect22(QGraphicsScene* self, QRectF* rect, QPen* pen);
QGraphicsRectItem* QGraphicsScene_addRect3(QGraphicsScene* self, QRectF* rect, QPen* pen, QBrush* brush);
QGraphicsTextItem* QGraphicsScene_addText2(QGraphicsScene* self, struct miqt_string text, QFont* font);
QGraphicsSimpleTextItem* QGraphicsScene_addSimpleText2(QGraphicsScene* self, struct miqt_string text, QFont* font);
QGraphicsProxyWidget* QGraphicsScene_addWidget2(QGraphicsScene* self, QWidget* widget, int wFlags);
QGraphicsEllipseItem* QGraphicsScene_addEllipse5(QGraphicsScene* self, double x, double y, double w, double h, QPen* pen);
QGraphicsEllipseItem* QGraphicsScene_addEllipse6(QGraphicsScene* self, double x, double y, double w, double h, QPen* pen, QBrush* brush);
QGraphicsLineItem* QGraphicsScene_addLine5(QGraphicsScene* self, double x1, double y1, double x2, double y2, QPen* pen);
QGraphicsRectItem* QGraphicsScene_addRect5(QGraphicsScene* self, double x, double y, double w, double h, QPen* pen);
QGraphicsRectItem* QGraphicsScene_addRect6(QGraphicsScene* self, double x, double y, double w, double h, QPen* pen, QBrush* brush);
void QGraphicsScene_setFocusItem2(QGraphicsScene* self, QGraphicsItem* item, int focusReason);
void QGraphicsScene_setFocus1(QGraphicsScene* self, int focusReason);
void QGraphicsScene_invalidate5(QGraphicsScene* self, double x, double y, double w, double h, int layers);
void QGraphicsScene_update1(QGraphicsScene* self, QRectF* rect);
void QGraphicsScene_invalidate1(QGraphicsScene* self, QRectF* rect);
void QGraphicsScene_invalidate22(QGraphicsScene* self, QRectF* rect, int layers);
bool QGraphicsScene_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsScene_virtualbase_metaObject(const void* self);
bool QGraphicsScene_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsScene_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsScene_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsScene_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsScene_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QGraphicsScene_virtualbase_inputMethodQuery(const void* self, int query);
bool QGraphicsScene_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsScene_virtualbase_event(void* self, QEvent* event);
bool QGraphicsScene_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsScene_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsScene_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_contextMenuEvent(void* self, QGraphicsSceneContextMenuEvent* event);
bool QGraphicsScene_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_dragEnterEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsScene_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_dragMoveEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsScene_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_dragLeaveEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsScene_override_virtual_dropEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_dropEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsScene_override_virtual_focusInEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QGraphicsScene_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QGraphicsScene_override_virtual_helpEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_helpEvent(void* self, QGraphicsSceneHelpEvent* event);
bool QGraphicsScene_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QGraphicsScene_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QGraphicsScene_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_mousePressEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsScene_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_mouseMoveEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsScene_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_mouseReleaseEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsScene_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_mouseDoubleClickEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsScene_override_virtual_wheelEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_wheelEvent(void* self, QGraphicsSceneWheelEvent* event);
bool QGraphicsScene_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QGraphicsScene_override_virtual_drawBackground(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_drawBackground(void* self, QPainter* painter, QRectF* rect);